mini-fix overflow

--- a/_main.scss
+++ b/_main.scss
@@ -174,6 +174,7 @@ main{
                     max-height: 400px;
                     position: relative;
                     padding: 0 2em;
+                    overflow: hidden;
 
                     @include desktop{
                         height: 100%;
